# energy-data-cli

./: .gitignore  Notes.txt  pyproject.toml
ukenergy/: cli.py
ukenergy/clients/: carbon.py
