[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ukenergy"
version = "0.1.0"
description = "A CLI tool for fetching UK energy data"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic",
    "rich",
]

[project.scripts]
ukenergy = "ukenergy.cli:main"

