[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ukenergy"
version = "0.1.0"
description = "A CLI tool for fetching UK energy data"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic",
    "rich",
]

[project.scripts]
ukenergy = "ukenergy.cli:main"